# zeta-workhorse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: barbell.csv  karate_weighted.gml  test.py  tests_readme.txt
zeta_workhorse/: __init__.py  calculators.py  parsers.py
