[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeta-workhorse"
version = "0.1.0"
description = "A calculator for graph zeta functions and spectral gaps."
authors = [
  { name="Andrew Triska", email="amtriska@gmail.com" }
]
dependencies = [
  "numpy",
  "sympy",
  "networkx"
]